// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinCodeDigit /> when digit is entered 1`] = `
<View
  accessible={true}
  center={true}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#777777",
      "height": 66,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "width": 38,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#777777",
        "borderRadius": 20,
        "height": 26,
        "width": 26,
      }
    }
  />
</View>
`;

exports[`<PinCodeDigit /> when digit is not entered 1`] = `
<View
  accessible={true}
  center={true}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "height": 66,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "width": 38,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#EAEAEA",
        "borderRadius": 20,
        "height": 26,
        "width": 26,
      }
    }
  />
</View>
`;
